--- a/LP_Lab14.vcxproj
+++ b/LP_Lab14.vcxproj
@@ -28,6 +28,7 @@
     <ClCompile Include="LPLab14.cpp" />
     <ClCompile Include="LT.cpp" />
     <ClCompile Include="Parm.cpp" />
+    <ClCompile Include="PolishNotation.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Analysis.h" />
@@ -38,6 +39,7 @@
     <ClInclude Include="Log.h" />
     <ClInclude Include="LT.h" />
     <ClInclude Include="Parm.h" />
+    <ClInclude Include="PolishNotation.h" />
     <ClInclude Include="RegularExpessions.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
