--- a/LP_Lab14.vcxproj
+++ b/LP_Lab14.vcxproj
@@ -28,6 +28,7 @@
     <ClCompile Include="Log.cpp" />
     <ClCompile Include="LPLab14.cpp" />
     <ClCompile Include="LT.cpp" />
+    <ClCompile Include="MFST.cpp" />
     <ClCompile Include="Parm.cpp" />
     <ClCompile Include="PolishNotation.cpp" />
   </ItemGroup>
@@ -40,6 +41,7 @@
     <ClInclude Include="IT.h" />
     <ClInclude Include="Log.h" />
     <ClInclude Include="LT.h" />
+    <ClInclude Include="MFST.h" />
     <ClInclude Include="Parm.h" />
     <ClInclude Include="PolishNotation.h" />
     <ClInclude Include="RegularExpessions.h" />
