--- a/LP_Lab14.vcxproj.filters
+++ b/LP_Lab14.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="GRB.cpp">
       <Filter>Исходные файлы\Namespaces</Filter>
     </ClCompile>
+    <ClCompile Include="MFST.cpp">
+      <Filter>Исходные файлы\Namespaces</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Error.h">
@@ -93,6 +96,9 @@
       <Filter>Файлы заголовков\Namespaces</Filter>
     </ClInclude>
     <ClInclude Include="Rule.h">
+      <Filter>Файлы заголовков\Namespaces</Filter>
+    </ClInclude>
+    <ClInclude Include="MFST.h">
       <Filter>Файлы заголовков\Namespaces</Filter>
     </ClInclude>
   </ItemGroup>
