--- a/LP_Lab14.vcxproj
+++ b/LP_Lab14.vcxproj
@@ -25,6 +25,7 @@
     <ClCompile Include="GRB.cpp" />
     <ClCompile Include="In.cpp" />
     <ClCompile Include="IT.cpp" />
+    <ClCompile Include="Lex.cpp" />
     <ClCompile Include="Log.cpp" />
     <ClCompile Include="LPLab14.cpp" />
     <ClCompile Include="LT.cpp" />
@@ -39,6 +40,7 @@
     <ClInclude Include="GRB.h" />
     <ClInclude Include="In.h" />
     <ClInclude Include="IT.h" />
+    <ClInclude Include="Lex.h" />
     <ClInclude Include="Log.h" />
     <ClInclude Include="LT.h" />
     <ClInclude Include="MFST.h" />
